Added frontend server to connect to backend api server and fixed CORS issue with gorilla CORS function to allow localhost:3000 and wrap servemux with it
