# product-api/handlers/delete.go
@@ -9,11 +9,13 @@ import (
 // swagger:route DELETE /products/{id} products deleteProduct
 // Return a list of products
 // responses:
-//	201: noContent
+//	201: noContentResponse
+// 	404: errorResponse
+// 	501: errorResponse
 
 // Delete handles DELETE requests and removes items from the database
-func (p *Products) DeleteProduct(rw http.ResponseWriter, r *http.Request) {
-	rw.Header().Add("Content-Type", "application/json")
+func (p *Products) DeleteProduct(w http.ResponseWriter, r *http.Request) {
+	w.Header().Add("Content-Type", "application/json")
 	id := getProductID(r)
 
 	p.l.Println("[DEBUG] deleting record id", id)
@@ -22,18 +24,18 @@ func (p *Products) DeleteProduct(rw http.ResponseWriter, r *http.Request) {
 	if err == data.ErrProductNotFound {
 		p.l.Println("[ERROR] deleting record id does not exist")
 
-		rw.WriteHeader(http.StatusNotFound)
-		data.ToJSON(&GenericError{Message: err.Error()}, rw)
+		w.WriteHeader(http.StatusNotFound)
+		data.ToJSON(&GenericError{Message: err.Error()}, w)
 		return
 	}
 
 	if err != nil {
 		p.l.Println("[ERROR] deleting record", err)
 
-		rw.WriteHeader(http.StatusInternalServerError)
-		data.ToJSON(&GenericError{Message: err.Error()}, rw)
+		w.WriteHeader(http.StatusInternalServerError)
+		data.ToJSON(&GenericError{Message: err.Error()}, w)
 		return
 	}
 
-	rw.WriteHeader(http.StatusNoContent)
+	w.WriteHeader(http.StatusNoContent)
 }
