# product-api/swagger.yaml
@@ -3,15 +3,16 @@ consumes:
     - application/json
 definitions:
     GenericError:
-        description: GenericError is a generic error message returned by a server
+        description: GenericError GenericError is a generic error message returned by a server
         properties:
             message:
+                description: message
                 type: string
                 x-go-name: Message
         type: object
-        x-go-package: github.com/McFlanky/microservices-fullstack-example/handlers
+        x-go-package: github.com/McFlanky/microservices-fullstack-example/sdk/models
     Product:
-        description: Product defines the structure for an API product
+        description: Product Product defines the structure for an API product
         properties:
             description:
                 description: the description for this poduct
@@ -45,17 +46,18 @@ definitions:
             - price
             - sku
         type: object
-        x-go-package: github.com/McFlanky/microservices-fullstack-example/data
+        x-go-package: github.com/McFlanky/microservices-fullstack-example/sdk/models
     ValidationError:
-        description: ValidationError is a collection of validation error messages
+        description: ValidationError ValidationError is a collection of validation error messages
         properties:
             messages:
+                description: messages
                 items:
                     type: string
                 type: array
                 x-go-name: Messages
         type: object
-        x-go-package: github.com/McFlanky/microservices-fullstack-example/handlers
+        x-go-package: github.com/McFlanky/microservices-fullstack-example/sdk/models
 info:
     description: Documentation for Product API
     title: of Product API
@@ -103,13 +105,6 @@ paths:
                   required: true
                   schema:
                     $ref: '#/definitions/Product'
-                - description: The id of the product for which the operation relates
-                  format: int64
-                  in: path
-                  name: id
-                  required: true
-                  type: integer
-                  x-go-name: ID
             responses:
                 "201":
                     $ref: '#/responses/noContentResponse'
@@ -123,14 +118,34 @@ paths:
         delete:
             description: Return a list of products
             operationId: deleteProduct
+            parameters:
+                - description: The id of the product for which the operation relates
+                  format: int64
+                  in: path
+                  name: id
+                  required: true
+                  type: integer
+                  x-go-name: ID
             responses:
                 "201":
-                    $ref: '#/responses/noContent'
+                    $ref: '#/responses/noContentResponse'
+                "404":
+                    $ref: '#/responses/errorResponse'
+                "501":
+                    $ref: '#/responses/errorResponse'
             tags:
                 - products
         get:
             description: Return a list of products from the database
             operationId: listSingleProduct
+            parameters:
+                - description: The id of the product for which the operation relates
+                  format: int64
+                  in: path
+                  name: id
+                  required: true
+                  type: integer
+                  x-go-name: ID
             responses:
                 "200":
                     $ref: '#/responses/productResponse'
@@ -158,9 +173,7 @@ responses:
     productsResponse:
         description: A list of products
         schema:
-            items:
-                $ref: '#/definitions/Product'
-            type: array
+            $ref: '#/definitions/Product'
 schemes:
     - http
 swagger: "2.0"
